[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seedrcc"
version = "2.0.0"
authors = [
  { name="Hemanta Pokharel", email="hemantapkh@yahoo.com" },
]
description = "Complete Python API wrapper of seedr.cc"
readme = "README.md"
requires-python = ">=3.7"
license = { file="LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "httpx",
]

[project.urls]
"Homepage" = "https://github.com/hemantapkh/seedrcc"
"Documentation" = "https://seedrcc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/hemantapkh/seedrcc/issues"
