[project]
name = "seedrcc"
version = "2.0.0"
authors = [{ name = "Hemanta Pokharel", email = "yo@hemantapkh.com" }]
description = "A comprehensive Python API wrapper for seedr.cc"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = ["anyio", "httpx"]

[project.urls]
"Homepage" = "https://github.com/hemantapkh/seedrcc"
"Documentation" = "https://seedrcc.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/hemantapkh/seedrcc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
docs = [
    "griffe-fieldz>=0.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.17",
    "mkdocstrings[python]>=0.30.0",
]
